- Supports Boxes *or* Portlets /CPSSkins installation at installation time
- Made the portal_message macro accept mappings for its translations.
- #535: Redesign the advanced search form
- Made the MembershipTool be able to reset password by a user providing a
  username or an email address. A password reset on many accounts sharing the
  same email address at the same time is also possible.
Bug fixes:
~~~~~~~~~~
- fix: the BMP bug (#305) in getImgTag.py
- fix: creating a document with a title that contains a meaningless word 
  raise an IndexError
- Modified the code of the JavaScript method from functions.js, showElement, to
  be more generic (this fixes problems notably in CPSSchemas).
- Added the script isInWorkspacesTree and use it in the main_template so that
  it returns a positive when an object is in a container that is not a Workspace
  itself but which is located below the root of the workspaces. This is for
  example useful for the case of CPSWiki where the isInWorkspace script was
  returning False.
- fix: setup portlets only on installation not on updates
- verifyPortlets() now uses a tuples of dictionaries for 'portlets'.
- Made the resetPassword functionality not send the password through email
  anymore but rather display it on the login_form web page (that should be
  protected through HTTPS). This is more secure since the password does not
  transmit over SMTP and this is more straightforward for the user who does not
  have to wait for yet another email message.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Reverted DocRenderBox.getContent() naming to DocRenderBox.getContents() to
  be consistent with other boxes and not be confused with proxy.getContent().
- manageCPSLanguage method is now in CPSDefault.utils
- Factorized code from CPSDefault/skins/cps_default/computeId to the method
  CPSUtil.id.generateId.
- Boxes related are moved to CPSBoxes
- new index fieldIndex Language, so you can query:
    query['Language'] = ['fr', 'it']