@@ -1557,15 +1557,22 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'order': 0,
                 'Title': 'Breadcrumbs',
                 },
-               {'type': 'Actions Portlet',
+               {'type': 'Custom Portlet',
                 'slot': 'left',
                 'order': 0,
-                'categories': ['user'],
-                'Title': 'User actions',
-                },
+                'custom_cache_params': ['user', 'current_lang'],
+                'render_method': 'portlet_session_info',
+                'Title': 'Session',
+               },
                {'type': 'Actions Portlet',
                 'slot': 'left',
                 'order': 10,
+                'categories': ['user'],
+                'Title': 'User actions',
+               },
+               {'type': 'Actions Portlet',
+                'slot': 'left',
+                'order': 20,
                 'categories': ['global'],
                 'Title': 'Portal actions',
                 },
