@@ -1,0 +1,9 @@
+<tal:block define="mtool here/portal_membership;
+                   anonymous mtool/isAnonymousUser">
+  <tal:block condition="not:anonymous">
+    <span i18n:translate="">You are currently logged in as</span>
+    <em tal:content="mtool/getAuthenticatedMember" />
+    (<a href="" i18n:translate=""
+    tal:attributes="href string:${here/portal_url}/logout">log out</a>)
+  </tal:block>
+</tal:block>
