@@ -16,6 +16,7 @@ New features:
 - Made the MembershipTool be able to reset password by a user providing a
   username or an email address. A password reset on many accounts sharing the
   same email address at the same time is also possible.
+- added a session information portlet to tell which user has a session open.
 Bug fixes:
 ~~~~~~~~~~
 - fix: the BMP bug (#305) in getImgTag.py
